# drs-poc

./: .gitignore  Dockerfile  README.rst  TODO.md  compose.yaml  crd-drs.yaml  drs_controller.py  pyproject.toml  requirements.txt  test-drs.yaml  tox.ini
deploy/: crd-drs.yaml  test-drs.yaml
drs_controller/: controller.py
drs_controller/collectors/: stacklight.py
drs_controller/movers/: openstack_live_migration.py
drs_controller/schedulers/: ease_most_loaded.py
